test/compile_error/missing_parameter_in_test.exs
defmodule ApicalTest.CompileError.MissingParameterInTest do
  use ExUnit.Case, async: true

  test "this"
end
